# autonomous-marketing-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
backend/: .bandit  .env.example  .flake8  .pre-commit-config.yaml  CODE_REVIEW_IMPROVEMENTS_SUMMARY.md  Dockerfile  EPIC_1_COMPLETION_SUMMARY.md  EPIC_2_COMPLETION_SUMMARY.md  EPIC_4_API_FRAMEWORK_SUMMARY.md  EPIC_5_TESTING_SUMMARY.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  verify_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 4d09239fd5b5_initial_user_model.py  8b09e73d0a69_enhanced_user_model_with_constraints_.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  campaigns.py  content.py  health.py  instagram.py  metrics.py  posts.py  users.py  (+1 more)
backend/app/core/: auth.py  circuit_breaker.py  config.py  database.py  deps.py  metrics.py  rate_limiting.py  redis.py  redis_client.py  security.py
backend/app/models/: __init__.py  campaign.py  instagram_post.py  post.py  rate_limit.py  user.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  common.py  content.py  instagram.py  post.py  user.py
backend/app/services/: instagram_service.py  openai_service.py  user_service.py
backend/app/tasks/: __init__.py  celery_app.py  post_tasks.py
backend/app/utils/: exceptions.py  logging.py
backend/docs/sprint1/: EPIC_3_AUTHENTICATION_SUMMARY.md  SPRINT_1_EPIC_SUMMARIES.md
backend/migrations/: env.py
backend/migrations/versions/: 5baf07d919a6_initial_user_model.py  e2018a13d044_add_instagram_posts_and_rate_limiting_.py
backend/postman/: Defeah_Marketing_Backend.postman_collection.json  Defeah_Marketing_Local.postman_environment.json  Defeah_Marketing_Production.postman_environment.json  README.md
backend/scripts/: init_db.py  seed_dev_data.py  validate_epic2.py
backend/tests/: __init__.py  conftest.py  factories.py  test_api_basic.py  test_async_operations.py  test_auth.py  test_auth_integration.py  test_auth_unit.py  test_main.py  test_models.py  test_performance.py  test_redis_integration.py  test_security.py  test_utils.py
(+27 files in other folders)
