[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defeah-marketing-backend"
version = "1.0.0"
description = "Autonomous Instagram marketing system backend"
requires-python = ">=3.9"
authors = [
    {name = "Defeah Marketing Team", email = "dev@defeah.com"}
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["migrations/*", "alembic/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "migrations/",
    "alembic/",
    "venv/",
    "build/",
    "dist/"
]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "redis.*",
    "alembic.*",
    "celery.*",
    "prometheus_client.*"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "migrations", "alembic"]
skips = ["B101"]  # Skip assert_used test

[tool.coverage.run]
source = ["app"]
omit = [
    "app/migrations/*",
    "app/alembic/*",
    "tests/*",
    "venv/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"